Fix button alignment

--- a/src/app/components/add-item/add-item.component.css
+++ b/src/app/components/add-item/add-item.component.css
@@ -6,3 +6,6 @@
 mat-form-field {
   width: 100%;
 }
+mat-card-actions {
+  padding: 10px 24px 24px 24px;
+}
