--- a/src/app/components/list-container-form/list-container-form.component.css
+++ b/src/app/components/list-container-form/list-container-form.component.css
@@ -6,3 +6,7 @@
 mat-form-field {
   width: 100%;
 }
+
+mat-card-actions button {
+  margin: 24px;
+}
